--- a/app/assets/stylesheets/discover.scss
+++ b/app/assets/stylesheets/discover.scss
@@ -62,14 +62,11 @@
     display: flex;
     flex-direction: column;
     position: fixed;
-    width: 200px;
     height: 600px;
     margin-top: 75px;
-    margin-left: 125px;
     z-index: 1;
-    left: 10%;
+    left: 20vw;
     cursor: pointer;
-    // padding: 50px 0px 0px 50px;
     // background: indianred;
 }
 
@@ -82,7 +79,7 @@
 }
 
 .side-nav > * {
-    margin: 0px auto 20px auto;
+    margin: 0px 0px 20px 0px;
     // background: coral;
 }
 
@@ -94,6 +91,15 @@
     line-height: 16px;
     width: 45%;
     // background: aqua;
+}
+
+.list {
+    // letter-spacing: 3px;
+    // text-transform: uppercase;
+    // color: rgb(245, 139, 68);
+    // font-size: 14px;
+    // line-height: 16px;
+    width: 45%;
 }
 
 .main-search {
@@ -267,7 +273,7 @@
     border-radius: 20px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     margin-bottom: 40px;
     margin-top: 40px;
